5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1708_3064.log
== TEST (2019-04-29 15:38:50) 
-- CODE:
nome = input("nome da cabeca: ").upper
if (nome <= 8 pontos + 2 a 20 pontos)
	print("pontos de vida perdidos: 8")
elif(nome <= dobro da soma de pontos)
	print("pontos de vidas perdidos: 2**10")
elif(nome <= pontos de vida perdidos: 10 pontos + 2 a 20 pontos)
else:
	print("Entradas invalidas")
-- ERROR:
File "XXXX", line 2
    if (nome <= 8 pontos + 2 a 20 pontos)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:11) 
-- CODE:
nome = input("nome da cabeca: ").upper
if (nome <= 8+2 a 20 pontos)
	print("pontos de vida perdidos: 8")
elif(nome <= dobro da soma de pontos)
	print("pontos de vidas perdidos: 2**10")
elif(nome <= pontos de vida perdidos: 10 pontos + 2 a 20 pontos)
else:
	print("Entradas invalidas")
-- ERROR:
File "XXXX", line 2
    if (nome <= 8+2 a 20 pontos)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:32) 
-- CODE:
nome = input("nome da cabeca: ").upper
if (nome <= 8 + 2 a 20)
	print("pontos de vida perdidos: 8")
elif(nome <= dobro da soma de pontos)
	print("pontos de vidas perdidos: 2**10")
elif(nome <= pontos de vida perdidos: 10 pontos + 2 a 20 pontos)
else:
	print("Entradas invalidas")
-- ERROR:
File "XXXX", line 2
    if (nome <= 8 + 2 a 20)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:41) 
-- CODE:
nome = input("nome da cabeca: ").upper
if (nome <= 8 + 2, 20)
	print("pontos de vida perdidos: 8")
elif(nome <= dobro da soma de pontos)
	print("pontos de vidas perdidos: 2**10")
elif(nome <= pontos de vida perdidos: 10 pontos + 2 a 20 pontos)
else:
	print("Entradas invalidas")
-- ERROR:
File "XXXX", line 2
    if (nome <= 8 + 2, 20)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:51) 
-- CODE:
nome = input("nome da cabeca: ").upper
if (nome <= 8)
	print("pontos de vida perdidos: 8")
elif(nome <= dobro da soma de pontos)
	print("pontos de vidas perdidos: 2**10")
elif(nome <= pontos de vida perdidos: 10 pontos + 2 a 20 pontos)
else:
	print("Entradas invalidas")
-- ERROR:
File "XXXX", line 2
    if (nome <= 8)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:40:41) 
-- CODE:
nome = input("nome da cabeca: ").upper
if (Aameul == 8)
	print("pontos de vida perdidos: 8")
elif(Hethrediah == dobro da soma de pontos)
	print("pontos de vidas perdidos: 2**10")
elif(Rakshasa == pontos de vida perdidos: 10 pontos + 2 a 20 pontos)
else:
	print("Entradas invalidas")
-- ERROR:
File "XXXX", line 2
    if (Aameul == 8)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
